--- a/src/app/event-form/event-form.component.html
+++ b/src/app/event-form/event-form.component.html
@@ -1,5 +1,5 @@
 <div class="event-form-container">
-  <h2>Dodaj nowe wydarzenie</h2>
+<!--  <h2>Dodaj nowe wydarzenie</h2>-->
   <form (ngSubmit)="addEvent()">
     <div class="form-group">
       <label for="title">Tytuł wydarzenia:</label>
