Refactor unnecessary func

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Moja Aplikacja Timeline</h1>
+  <h1>Aplikacja Timeline</h1>
 </header>
 <main>
   <!-- Router outlet for displaying components -->
